src/test/ui/parser/no-const-fn-in-extern-block.rs
extern {
    const fn foo();
    //~^ ERROR extern items cannot be `const`
    const unsafe fn bar();
    //~^ ERROR extern items cannot be `const`
}

fn main() {}
